kubernetes/agenda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-agenda
spec:
  selector:
    matchLabels:
      app: agenda
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: agenda
        tier: backend
        track: stable
    spec:
      containers:
        - name: agenda-producer
          image: localhost:5000/api/agenda-producer:v0.1
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8082
        - name: agenda-consumer
          image: localhost:5000/api/agenda-consumer:v0.1
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8083
    - imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: agenda-service
spec:
  selector:
    app: agenda
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
